--- a/面试/算法/数组/简单/数组-简单(41-60).md
+++ b/面试/算法/数组/简单/数组-简单(41-60).md
@@ -358,6 +358,44 @@ class Solution {
 }
 ```
 
+**优化**
+
+```java
+class Solution {
+    // 使用桶排序加双指针
+    public int[] sortArrayByParityII(int[] A) {
+        int[] bucket = new int[1001];
+        for(int num : A){
+            bucket[num]++;
+        }
+        int oddIndex = 1;
+        int evenIndex = 0;
+        int ans[] = new int[A.length];
+        int start = 0;
+        while(start < A.length){
+            if(start % 2 == 0){
+                if(bucket[evenIndex] > 0){
+                    ans[start++] = evenIndex;
+                    bucket[evenIndex]--;
+                }else{
+                    evenIndex += 2;
+                }
+            }else{
+                if(bucket[oddIndex] > 0){
+                    ans[start++] = oddIndex;
+                    bucket[oddIndex]--;
+                }else{
+                    oddIndex += 2;
+                }
+            }
+        }
+        return ans;
+    }
+}
+```
+
+
+
 ## 46.[[941. 有效的山脉数组](https://leetcode-cn.com/problems/valid-mountain-array/)]
 
 **描述**
