--- a/面试/算法/数组/简单/数组-简单(121-140).md
+++ b/面试/算法/数组/简单/数组-简单(121-140).md
@@ -1,4 +1,4 @@
-题目来源**
+**题目来源**
 
 [力扣（LeetCode）](https://leetcode-cn.com/)
 
@@ -8,78 +8,54 @@
 
 # 数组-简单(121-140)
 
-## 121.[[剑指 Offer 03. 数组中重复的数字](https://leetcode-cn.com/problems/shu-zu-zhong-zhong-fu-de-shu-zi-lcof/)]
+## 121.[[1652. 拆炸弹](https://leetcode-cn.com/problems/defuse-the-bomb/)]
 
 **描述**
 
-找出数组中重复的数字。
+你有一个炸弹需要拆除，时间紧迫！你的情报员会给你一个长度为 n 的 循环 数组 code 以及一个密钥 k 。
 
+为了获得正确的密码，你需要替换掉每一个数字。所有数字会 同时 被替换。
 
-在一个长度为 n 的数组 nums 里的所有数字都在 0～n-1 的范围内。数组中某些数字是重复的，但不知道有几个数字重复了，也不知道每个数字重复了几次。请找出数组中任意一个重复的数字。
+- 如果 k > 0 ，将第 i 个数字用 接下来 k 个数字之和替换。
+- 如果 k < 0 ，将第 i 个数字用 之前 k 个数字之和替换。
+- 如果 k == 0 ，将第 i 个数字用 0 替换。
+
+由于 code 是循环的， code[n-1] 下一个元素是 code[0] ，且 code[0] 前一个元素是 code[n-1] 。
+
+给你 循环 数组 code 和整数密钥 k ，请你返回解密后的结果来拆除炸弹！
 
 **示例**
 
 **示例 1：**
 
 ```
-输入：
-[2, 3, 1, 0, 2, 5, 3]
-输出：2 或 3 
-```
-
-**提示：**
-
-- 2 <= n <= 100000
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 遍历数组, 每个数字放置到与数字索引的位置上, 每次查询索引对应的数字与当前的数字是否相同
-    public int findRepeatNumber(int[] nums) {
-        for(int i=0; i<nums.length; i++){
-            while(nums[i] != i){
-                if(nums[i] == nums[nums[i]]){
-                    return nums[i];
-                }
-                int tmp = nums[i];
-                nums[i] = nums[tmp];
-                nums[tmp] = tmp;
-            }
-        }
-        return -1;
-    }
-}
-```
-
-## 122.[[剑指 Offer 29. 顺时针打印矩阵](https://leetcode-cn.com/problems/shun-shi-zhen-da-yin-ju-zhen-lcof/)]
-
-**描述**
-
-输入一个矩阵，按照从外向里以顺时针的顺序依次打印出每一个数字。
-
-**示例**
-
-**示例 1：**
-
-```
-输入：matrix = [[1,2,3],[4,5,6],[7,8,9]]
-输出：[1,2,3,6,9,8,7,4,5]
+输入：code = [5,7,1,4], k = 3
+输出：[12,10,16,13]
+解释：每个数字都被接下来 3 个数字之和替换。解密后的密码为 [7+1+4, 1+4+5, 4+5+7, 5+7+1]。注意到数组是循环连接的。
 ```
 
 **示例 2：**
 
 ```
-输入：matrix = [[1,2,3,4],[5,6,7,8],[9,10,11,12]]
-输出：[1,2,3,4,8,12,11,10,9,5,6,7]
+输入：code = [1,2,3,4], k = 0
+输出：[0,0,0,0]
+解释：当 k 为 0 时，所有数字都被 0 替换。
+```
+
+**示例 3：**
+
+```
+输入：code = [2,4,9,3], k = -2
+输出：[12,5,6,13]
+解释：解密后的密码为 [3+9, 2+3, 4+2, 9+4] 。注意到数组是循环连接的。如果 k 是负数，那么和为 之前 的数字。
 ```
 
 **提示：**
 
-- `0 <= matrix.length <= 100`
-- `0 <= matrix[i].length <= 100`
+- `n == code.length`
+- `1 <= n <= 100`
+- `1 <= code[i] <= 100`
+- `-(n - 1) <= k <= n - 1`
 
 **题解**
 
@@ -87,310 +63,102 @@ class Solution {
 
 ```java
 class Solution {
-    public int[] spiralOrder(int[][] matrix) {
-        if(matrix.length == 0 || matrix[0].length == 0){
-            return new int[0];
-        }
-        int len = matrix.length, clen = matrix[0].length;
-        int[] ans = new int[len * clen];
+    public int[] decrypt(int[] code, int k) {
+        int[] ans = new int[code.length];
+        if(k == 0) return ans;
+        int len = code.length;
         int start = 0;
-        // 创建四个变量, 分别表示上下左右四个边界
-        int left = 0, right = clen - 1, top = 0, bottom = len - 1;
-        while(left <= right && top <= bottom){
-            // 遍历上边
-            for(int i = left; i <= right; i++){
-                ans[start++] = matrix[top][i];
-            }
-            // 遍历右边
-            for(int i = top + 1; i <= bottom; i++){
-                ans[start++] = matrix[i][right];
-            }
-            // 如果只剩最中间的一条, 上面两个循环已经完成遍历
-            if(left < right && top < bottom){
-                // 遍历下边
-                for(int i = right - 1; i >= left; i--){
-                    ans[start++] = matrix[bottom][i];
+        if(k > 0){
+            for(int i = 0; i < len; i++){
+                int sum = 0;
+                for(int j = i + 1; j <= i + k; j++){
+                    sum += code[j % len];
                 }
-                // 遍历左边
-                for(int i = bottom - 1; i > top; i--){
-                    ans[start++] = matrix[i][left];
-                }
+                ans[start++] = sum;
             }
-            // 收窄四边边界
-            left++;
-            right--;
-            top++;
-            bottom--;
+        }else{
+            k = 0 - k;
+            for(int i = 0; i < len; i++){
+                int sum = 0;
+                for(int j = i - 1; j >= i - k; j--){
+                    sum += code[(j + len) % len];
+                }
+                ans[start++] = sum;
+            }
         }
         return ans;
     }
 }
 ```
 
-## 123.[[剑指 Offer 53 - I. 在排序数组中查找数字 I](https://leetcode-cn.com/problems/zai-pai-xu-shu-zu-zhong-cha-zhao-shu-zi-lcof/)]
+## 122.[[1656. 设计有序流](https://leetcode-cn.com/problems/design-an-ordered-stream/)]
 
 **描述**
 
-统计一个数字在排序数组中出现的次数。
+有 n 个 (id, value) 对，其中 id 是 1 到 n 之间的一个整数，value 是一个字符串。不存在 id 相同的两个 (id, value) 对。
+
+设计一个流，以 任意 顺序获取 n 个 (id, value) 对，并在多次调用时 按 id 递增的顺序 返回一些值。
+
+实现 OrderedStream 类：
+
+- OrderedStream(int n) 构造一个能接收 n 个值的流，并将当前指针 ptr 设为 1 。
+- String[] insert(int id, String value) 向流中存储新的 (id, value) 对。存储后：
+  - 如果流存储有 id = ptr 的 (id, value) 对，则找出从 id = ptr 开始的 最长 id 连续递增序列 ，并 按顺序 返回与这些 id 关联的值的列表。然后，将 ptr 更新为最后那个  id + 1 。
+  - 否则，返回一个空列表。
 
 **示例**
 
 **示例 1：**
 
 ```
-输入: nums = [5,7,7,8,8,10], target = 8
-输出: 2
-```
+输入
+["OrderedStream", "insert", "insert", "insert", "insert", "insert"]
+[[5], [3, "ccccc"], [1, "aaaaa"], [2, "bbbbb"], [5, "eeeee"], [4, "ddddd"]]
+输出
+[null, [], ["aaaaa"], ["bbbbb", "ccccc"], [], ["ddddd", "eeeee"]]
 
-**示例 2：**
-
-```
-输入: nums = [5,7,7,8,8,10], target = 6
-输出: 0
+解释
+OrderedStream os= new OrderedStream(5);
+os.insert(3, "ccccc"); // 插入 (3, "ccccc")，返回 []
+os.insert(1, "aaaaa"); // 插入 (1, "aaaaa")，返回 ["aaaaa"]
+os.insert(2, "bbbbb"); // 插入 (2, "bbbbb")，返回 ["bbbbb", "ccccc"]
+os.insert(5, "eeeee"); // 插入 (5, "eeeee")，返回 []
+os.insert(4, "ddddd"); // 插入 (4, "ddddd")，返回 ["ddddd", "eeeee"]
 ```
 
 **提示：**
 
-- 0 <= 数组长度 <= 50000
+- 1 <= n <= 1000
+- 1 <= id <= n
+- value.length == 5
+- value 仅由小写字母组成
+- 每次调用 insert 都会使用一个唯一的 id
+- 恰好调用 n 次 insert
 
 **题解**
 
 **Java**
 
 ```java
-class Solution {
-   	// 使用二分查找, 找到后目标数字后, 向两边扩散查找
-    public int search(int[] nums, int target) {
-        int count = 0;
-        int left = 0, right = nums.length - 1; 
-        while(left <= right){
-            int half = (left + right) / 2;
-            if(target > nums[half]){
-                left = half + 1;
-            }else if(target < nums[half]){
-                right = half - 1;
-            }else{
-                count++;
-                for(int i = half - 1; i >= 0; i--){
-                    if(nums[i] != target) break;
-                    count++;
-                }
-                for(int i = half + 1; i < nums.length; i++){
-                    if(nums[i] != target) break;
-                    count++;
-                }
+class OrderedStream {
+    private String[] tmp;
+    private int ptr = 0;
+    public OrderedStream(int n) {
+        tmp = new String[n];
+    }
+    
+    public List<String> insert(int id, String value) {
+        tmp[id - 1] = value;
+        List<String> ans = new ArrayList<>();
+        for(int i = ptr; i < tmp.length; i++){
+            if(tmp[i] == null){
                 break;
-            }
-        }
-        return count;
-    }
-}
-```
-
-## 124.[[剑指 Offer 53 - II. 0～n-1中缺失的数字](https://leetcode-cn.com/problems/que-shi-de-shu-zi-lcof/)]
-
-**描述**
-
-一个长度为n-1的递增排序数组中的所有数字都是唯一的，并且每个数字都在范围0～n-1之内。在范围0～n-1内的n个数字中有且只有一个数字不在该数组中，请找出这个数字。
-
-**示例**
-
-**示例 1：**
-
-```
-输入: [0,1,3]
-输出: 2
-```
-
-**示例 2：**
-
-```
-输入: [0,1,2,3,4,5,6,7,9]
-输出: 8
-```
-
-**提示：**
-
-- 0 <= 数组长度 <= 50000
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 使用异或
-    public int missingNumber(int[] nums) {
-        int len = nums.length;
-        for(int i = 0; i < nums.length; i++){
-            len ^= nums[i] ^ i;
-        }
-        return len;
-    }
-}
-```
-
-```java
-class Solution {
-    // 二分法
-    public int missingNumber(int[] nums) {
-        int left = 0, right = nums.length-1;
-        // 不断缩小范围
-        while(left <= right){
-            int half = left + (right - left) / 2;
-            if(nums[half] == half){
-                left = half + 1;
-            }else {
-                right = half - 1;
-            }
-        }
-        return left;
-    }
-}
-```
-
-## 125.[[面试题 01.01. 判定字符是否唯一](https://leetcode-cn.com/problems/is-unique-lcci/)]
-
-**描述**
-
-实现一个算法，确定一个字符串 `s` 的所有字符是否全都不同。
-
-**示例**
-
-**示例 1：**
-
-```
-输入: s = "leetcode"
-输出: false 
-```
-
-**示例 2：**
-
-```
-输入: s = "abc"
-输出: true
-```
-
-**提示：**
-
-- `0 <= len(s) <= 100`
-- 如果你不使用额外的数据结构，会很加分。
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public boolean isUnique(String astr) {
-        for(int i=0; i<astr.length(); i++){
-            for(int j=i+1; j<astr.length(); j++){
-                if(astr.charAt(i) == astr.charAt(j)){
-                    return false;
-                }
-            }
-        }
-        return true;
-    }
-}
-```
-
-## 126.[[面试题 01.02. 判定是否互为字符重排](https://leetcode-cn.com/problems/check-permutation-lcci/)]
-
-**描述**
-
-给定两个字符串 `s1` 和 `s2`，请编写一个程序，确定其中一个字符串的字符重新排列后，能否变成另一个字符串。
-
-**示例**
-
-**示例 1：**
-
-```
-输入: s1 = "abc", s2 = "bca"
-输出: true 
-```
-
-**示例 2：**
-
-```
-输入: s1 = "abc", s2 = "bad"
-输出: false
-```
-
-**提示：**
-
-- `0 <= len(s1) <= 100`
-- `0 <= len(s2) <= 100`
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 桶排序
-    public boolean CheckPermutation(String s1, String s2) {
-        int[] bucket = new int[26];
-        for(int i=0; i<s1.length(); i++){
-            bucket[s1.charAt(i) - 'a']++;
-        }
-        for(int i=0; i<s2.length(); i++){
-            if(bucket[s2.charAt(i) - 'a'] == 0){
-                return false;
             }else{
-                bucket[s2.charAt(i) - 'a']--;
+                ptr++;
+                ans.add(tmp[i]);
             }
         }
-        return true;
-    }
-}
-```
-
-## 127.[[面试题 08.03. 魔术索引](https://leetcode-cn.com/problems/magic-index-lcci/)]
-
-**描述**
-
-魔术索引。 在数组A[0...n-1]中，有所谓的魔术索引，满足条件A[i] = i。给定一个有序整数数组，编写一种方法找出魔术索引，若有的话，在数组A中找出一个魔术索引，如果没有，则返回-1。若有多个魔术索引，返回索引值最小的一个。
-
-**示例**
-
-**示例 1：**
-
-```
- 输入：nums = [0, 2, 3, 4, 5]
- 输出：0
- 说明: 0下标的元素为0
-```
-
-**示例 2：**
-
-```
- 输入：nums = [1, 1, 1]
- 输出：1
-```
-
-**提示：**
-
-- nums长度在[1, 1000000]之间
-- 此题为原书中的 Follow-up，即数组中可能包含重复元素的版本
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    // 间隔跳跃
-    // 每次比较当前数和索引, 不相等时, 比较当前数和下一个索引哪个比较大, 指针跳到较大的数
-    // 因为, 目标数一定大于当前数, 和当前数对应的正确的索引
-    public int findMagicIndex(int[] nums) {
-        for(int i=0; i<nums.length;){
-            if(nums[i] == i){
-                return i;
-            }
-            i = Math.max(i+1, nums[i]);
-        }
-        return -1;
+        return ans;
     }
 }
 ```
