--- a/面试/算法/数组/中等/数组-中等(1-20).md
+++ b/面试/算法/数组/中等/数组-中等(1-20).md
@@ -8,33 +8,43 @@
 
 # 数组-中等(1-20)
 
-## 1.[[56. 合并区间](https://leetcode-cn.com/problems/merge-intervals/)]
+## 1.[[11. 盛最多水的容器](https://leetcode-cn.com/problems/container-with-most-water/)]
 
 **描述**
 
-给出一个区间的集合，请合并所有重叠的区间。
+给你 n 个非负整数 a1，a2，...，an，每个数代表坐标中的一个点 (i, ai) 。在坐标内画 n 条垂直线，垂直线 i 的两个端点分别为 (i, ai) 和 (i, 0) 。找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
+
+说明：你不能倾斜容器。
 
 **示例**
 
 **示例 1：**
 
 ```
-输入: intervals = [[1,3],[2,6],[8,10],[15,18]]
-输出: [[1,6],[8,10],[15,18]]
-解释: 区间 [1,3] 和 [2,6] 重叠, 将它们合并为 [1,6].
+输入：[1,8,6,2,5,4,8,3,7]
+输出：49 
+解释：图中垂直线代表输入数组 [1,8,6,2,5,4,8,3,7]。在此情况下，容器能够容纳水（表示为蓝色部分）的最大值为 49。
 ```
 
 **示例 2：**
 
 ```
-输入: intervals = [[1,4],[4,5]]
-输出: [[1,5]]
-解释: 区间 [1,4] 和 [4,5] 可被视为重叠区间。
+输入：height = [1,1]
+输出：1
+```
+
+**示例 3：**
+
+```
+输入：height = [4,3,2,1,4]
+输出：16
 ```
 
 **提示：**
 
-- `intervals[i][0] <= intervals[i][1]`
+- `n = height.length`
+- `2 <= n <= 3 * 104`
+- `0 <= height[i] <= 3 * 104`
 
 **题解**
 
@@ -42,25 +52,455 @@
 
 ```java
 class Solution {
-    public int[][] merge(int[][] intervals) {
-        // 通过每个子数组的第一项排序
-        Arrays.sort(intervals, (interval1, interval2) -> {
-            return interval1[0] - interval2[0];
-        });
-        List<int[]> merged = new ArrayList<>();
-        for(int i=0; i<intervals.length; i++){
-            int L = intervals[i][0];
-            int R = intervals[i][1];
-            // 如果list为空, 就直接存进去
-            // 如果list不为空, 并且list中的最后一项子数组的右区间小于 L, 说明两个区间没有重叠的部分
-            // 如果list中的最后一项子数组的右区间大于 L, 就说明两个区间有重叠的部分, 再比较两个区间的右区间, 取较大值
-            if(merged.size() == 0 || merged.get(merged.size() - 1)[1] < L){
-                merged.add(new int[]{L, R});
-            } else {
-                merged.get(merged.size() - 1)[1] = Math.max(merged.get(merged.size() - 1)[1], R);
+    
+    public int maxArea(int[] height) {
+        if (height.length<2){
+            return 0;
+        }
+        int left = 0;
+        int right = height.length - 1;
+        int max = 0;
+        // 从两边向中间不断缩小范围, 找出最大值
+        while(left < right){
+            int t = Math.min(height[left], height[right]);
+            max = t * (right - left) > max ? t * (right - left) : max;
+            // 当左边大于右边, 移动右边的边界向左移动
+            // 移动后判断, 移动后如果小于等于原来的边界, 则继续移动
+            if(height[left] > height[right]){
+                while(height[right] <= t && left < right){
+                    right--;
+                }
+            }else{
+                while(height[left] <= t && left < right){
+                    left++;
+                }
+            } 
+        }
+        return max;
+    }
+}
+```
+
+## 2.[[15. 三数之和](https://leetcode-cn.com/problems/3sum/)]
+
+**描述**
+
+给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？请你找出所有满足条件且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+
+**示例**
+
+**示例 1：**
+
+```
+给定数组 nums = [-1, 0, 1, 2, -1, -4]，
+
+满足要求的三元组集合为：
+[
+  [-1, 0, 1],
+  [-1, -1, 2]
+]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        Arrays.sort(nums);
+        List<List<Integer>> ans = new ArrayList<>();
+        int len = nums.length;
+        // 将三数之和, 转变为两数之和等于0 - nums[i]的问题
+        for(int i = 0; i < len - 2; i++){
+            if(nums[i] > 0){
+                break;
+            }
+            if(i > 0 && nums[i] == nums[i-1]){
+                continue;
+            }
+            int target = -nums[i];
+            int left = i + 1;
+            int right = len-1;
+            while(left < right){
+                if(nums[left] + nums[right] == target){
+                    List<Integer> tmp  = new ArrayList<>();
+                    tmp.add(nums[i]);
+                    tmp.add(nums[left]);
+                    tmp.add(nums[right]);
+                    ans.add(tmp);
+                    // 去掉重复的值
+                    int t = left++;
+                    while(left < right && nums[left] == nums[t]){
+                        left++;
+                    }
+                }else if(nums[left] + nums[right] < target){
+                    // 去掉重复的值
+                    int t = left++;
+                    while(left < right && nums[left] == nums[t]){
+                        left++;
+                    }
+                }else{
+                    // 去掉重复的值
+                    int t = right--;
+                    while(left < right && nums[right] == nums[t]){
+                        right--;
+                    }
+                }
             }
         }
-        return merged.toArray(new int[merged.size()][]);
+        return ans;
+    }
+}
+```
+
+## 3.[[16. 最接近的三数之和](https://leetcode-cn.com/problems/3sum-closest/)]
+
+**描述**
+
+给定一个包括 n 个整数的数组 nums 和 一个目标值 target。找出 nums 中的三个整数，使得它们的和与 target 最接近。返回这三个数的和。假定每组输入只存在唯一答案。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [-1,2,1,-4], target = 1
+输出：2
+解释：与 target 最接近的和是 2 (-1 + 2 + 1 = 2) 。
+```
+
+**提示**
+
+- `3 <= nums.length <= 10^3`
+- `-10^3 <= nums[i] <= 10^3`
+- `-10^4 <= target <= 10^4`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int threeSumClosest(int[] nums, int target) {
+        int len = nums.length;
+        int ans = nums[0] + nums[1] + nums[2];
+        Arrays.sort(nums);
+        // 将最接近三数之和, 转变为最接近两数之和的问题
+        for(int i = 0; i < nums.length - 2; i++){
+            int oTarget = target - nums[i];
+            int left = i + 1, right = len - 1;
+            int sum = 0;
+            // 计算最小和, 如果最小和都大于目标值, 则不用继续遍历
+            int min = nums[i] + nums[left] + nums[left + 1];
+            if(min > target){
+                if(Math.abs(min - target) < Math.abs(ans - target)){
+                    ans = min;
+                }
+                continue;
+            }
+            // 计算最大和, 如果最大和都小于目标值, 则不用继续遍历
+            int max = nums[i] + nums[right] + nums[right - 1];
+            if(max < target){
+                if(Math.abs(max - target) < Math.abs(ans - target)){
+                    ans = max;
+                }
+                continue;
+            }
+            // 从两边查找, 每一次遍历, 三个数相加与ans比较看是否更接近目标数
+            while(left < right){
+                sum = nums[left] + nums[right];
+                if(Math.abs(nums[i] + sum - target) < Math.abs(ans - target)){
+                    ans = nums[i] + sum;
+                }
+                if(sum > oTarget){
+                    int t = right;
+                    right--;
+                    while(left < right && right == t){
+                        right--;
+                    }
+                }else if(sum < oTarget){
+                    int t = left;
+                    left++;
+                    while(left < right && left == t){
+                        left++;
+                    }
+                }else{
+                    return target;
+                }
+            }
+            
+        }
+        return ans;
+    }
+}
+```
+
+## 4.[[18. 四数之和](https://leetcode-cn.com/problems/4sum/)]
+
+**描述**
+
+给定一个包含 n 个整数的数组 nums 和一个目标值 target，判断 nums 中是否存在四个元素 a，b，c 和 d ，使得 a + b + c + d 的值与 target 相等？找出所有满足条件且不重复的四元组。
+
+**注意：**
+
+答案中不可以包含重复的四元组。
+
+**示例**
+
+**示例 1：**
+
+```
+给定数组 nums = [1, 0, -1, 0, -2, 2]，和 target = 0。
+
+满足要求的四元组集合为：
+[
+  [-1,  0, 0, 1],
+  [-2, -1, 1, 2],
+  [-2,  0, 0, 2]
+]
+```
+
+**提示**
+
+- `3 <= nums.length <= 10^3`
+- `-10^3 <= nums[i] <= 10^3`
+- `-10^4 <= target <= 10^4`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 四数之和转换为三数之和, 三数之和再转换为两数之和
+    public List<List<Integer>> fourSum(int[] nums, int target) {
+        List<List<Integer>> ans = new ArrayList<>();
+        Arrays.sort(nums);
+        int len = nums.length;
+        for(int i=0; i<len-3; i++){
+            if(i > 0 && nums[i] == nums[i - 1]) continue;
+            // 最小和大于target, 结束循环
+            if(nums[i] + nums[i+1] + nums[i+2] + nums[i+3] > target) break;
+            // 最大和小于target, 跳出当前循环
+            if(nums[i] + nums[len-1] + nums[len-2] + nums[len-3] < target) continue;
+            int aTarget = target - nums[i];
+            for(int j=i+1; j<len-2; j++){
+                if(j > i+1 && nums[j] == nums[j - 1]) continue;
+                int bTarget = aTarget - nums[j];
+                int left = j + 1, right = len - 1;
+                if(nums[i] + nums[j] + nums[left] + nums[left+1] > target) break;
+                if(nums[i] + nums[j] + nums[right] + nums[right-1] < target) continue;
+                while(left < right){
+                    int sum = nums[left] + nums[right];
+                    if(sum > bTarget){
+                        int t = right--;
+                        while(left < right && nums[t] == nums[right]){
+                            right--;
+                        }
+                    }else if(sum < bTarget){
+                        int t = left++;
+                        while(left < right && nums[t] == nums[left]){
+                            left++;
+                        }
+                    }else{
+                        List<Integer> tmp = new ArrayList<>();
+                        tmp.add(nums[i]);
+                        tmp.add(nums[j]);
+                        tmp.add(nums[left]);
+                        tmp.add(nums[right]);
+                        ans.add(tmp);
+                        int t = left++;
+                        while(left < right && nums[t] == nums[left]){
+                            left++;
+                        }
+                        int t2 = right--;
+                        while(left < right && nums[t2] == nums[right]){
+                            right--;
+                        }
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 5.[[31. 下一个排列](https://leetcode-cn.com/problems/next-permutation/)]
+
+**描述**
+
+实现获取 下一个排列 的函数，算法需要将给定数字序列重新排列成字典序中下一个更大的排列。
+
+如果不存在下一个更大的排列，则将数字重新排列成最小的排列（即升序排列）。
+
+必须 原地 修改，只允许使用额外常数空间。
+
+**注意：**
+
+答案中不可以包含重复的四元组。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [1,2,3]
+输出：[1,3,2]
+```
+
+**示例 2：**
+
+```
+输入：nums = [3,2,1]
+输出：[1,2,3]
+```
+
+**示例 3：**
+
+```
+输入：nums = [1,1,5]
+输出：[1,5,1]
+```
+
+**提示**
+
+- `3 <= nums.length <= 10^3`
+- `-10^3 <= nums[i] <= 10^3`
+- `-10^4 <= target <= 10^4`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public void nextPermutation(int[] nums) {
+        // 从后边第二个值向前遍历, 找到非降序的nums[i]
+        // 例  12431,  432是降序的, 所以找到非降序的2
+        int i = nums.length - 2;
+        while(i >= 0 && nums[i] >= nums[i + 1]){
+            i--;
+        }
+        // 如果i<0说明, 都是降序的, 直接翻转数组, 就会得到升序数组
+        if(i >= 0){
+            int j = nums.length - 1;
+            // 从后向前遍历, 找到比nums[i]大的值, nums[j] 
+            // 例 12431中 找到3
+            while(j >= 0 && nums[j] <= nums[i]){
+                j--;
+            }
+            // 交换两个值
+            // 例 2和3交换 13421
+            swap(nums, i, j);
+        }
+        // 最后将nums[i] 后面的值翻转
+        // 翻转后 13124
+        reverse(nums, i + 1);
+    }
+
+    public void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+
+    public void reverse(int[] nums, int start) {
+        int left = start, right = nums.length - 1;
+        while (left < right) {
+            swap(nums, left, right);
+            left++;
+            right--;
+        }
+    }
+}
+```
+
+## 5.[[33. 搜索旋转排序数组](https://leetcode-cn.com/problems/search-in-rotated-sorted-array/)]
+
+**描述**
+
+给你一个整数数组 nums ，和一个整数 target 。
+
+该整数数组原本是按升序排列，但输入时在预先未知的某个点上进行了旋转。（例如，数组 [0,1,2,4,5,6,7] 可能变为 [4,5,6,7,0,1,2] ）。
+
+请你在数组中搜索 target ，如果数组中存在这个目标值，则返回它的索引，否则返回 -1 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：nums = [4,5,6,7,0,1,2], target = 0
+输出：4
+```
+
+**示例 2：**
+
+```
+输入：nums = [4,5,6,7,0,1,2], target = 3
+输出：-1
+```
+
+**示例 3：**
+
+```
+输入：nums = [1], target = 0
+输出：-1
+```
+
+**提示**
+
+- `3 <= nums.length <= 10^3`
+- `-10^3 <= nums[i] <= 10^3`
+- `-10^4 <= target <= 10^4`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public void nextPermutation(int[] nums) {
+        // 从后边第二个值向前遍历, 找到非降序的nums[i]
+        // 例  12431,  432是降序的, 所以找到非降序的2
+        int i = nums.length - 2;
+        while(i >= 0 && nums[i] >= nums[i + 1]){
+            i--;
+        }
+        // 如果i<0说明, 都是降序的, 直接翻转数组, 就会得到升序数组
+        if(i >= 0){
+            int j = nums.length - 1;
+            // 从后向前遍历, 找到比nums[i]大的值, nums[j] 
+            // 例 12431中 找到3
+            while(j >= 0 && nums[j] <= nums[i]){
+                j--;
+            }
+            // 交换两个值
+            // 例 2和3交换 13421
+            swap(nums, i, j);
+        }
+        // 最后将nums[i] 后面的值翻转
+        // 翻转后 13124
+        reverse(nums, i + 1);
+    }
+
+    public void swap(int[] nums, int i, int j) {
+        int temp = nums[i];
+        nums[i] = nums[j];
+        nums[j] = temp;
+    }
+
+    public void reverse(int[] nums, int start) {
+        int left = start, right = nums.length - 1;
+        while (left < right) {
+            swap(nums, left, right);
+            left++;
+            right--;
+        }
     }
 }
 ```
