--- a/面试/算法/字符串/简单/字符串-简单(1-20).md
+++ b/面试/算法/字符串/简单/字符串-简单(1-20).md
@@ -8,7 +8,99 @@
 
 # 字符串-简单(1-20)
 
-## 1.[[14. 最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/)]
+## 1.[[13. 罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/)]
+
+**描述**
+
+罗马数字包含以下七种字符: I， V， X， L，C，D 和 M。
+
+```
+字符          数值
+I             1
+V             5
+X             10
+L             50
+C             100
+D             500
+M             1000
+```
+
+
+例如， 罗马数字 2 写做 II ，即为两个并列的 1。12 写做 XII ，即为 X + II 。 27 写做  XXVII, 即为 XX + V + II 。
+
+通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况：
+
+- I 可以放在 V (5) 和 X (10) 的左边，来表示 4 和 9。
+
+- X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。 
+
+- C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。
+
+给定一个罗马数字，将其转换成整数。输入确保在 1 到 3999 的范围内。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "III"
+输出: 3
+```
+
+**示例 2：**
+
+```
+输入: "IV"
+输出: 4
+```
+
+**示例 3：**
+
+```
+输入: "LVIII"
+输出: 58
+解释: L = 50, V= 5, III = 3.
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 前一个数与后一个数比较, 如果比后一个数小, 说明他是一个组合数 IV IX这种, 所以需要先减I, 再加V
+    public int romanToInt(String s) {
+        int sum = 0;
+        int preNum = getValue(s.charAt(0));
+        for(int i = 1;i < s.length(); i ++) {
+            int num = getValue(s.charAt(i));
+            if(preNum < num) {
+                sum -= preNum;
+            } else {
+                sum += preNum;
+            }
+            preNum = num;
+        }
+        sum += preNum;
+        return sum;
+    }
+    
+    private int getValue(char ch) {
+        switch(ch) {
+            case 'I': return 1;
+            case 'V': return 5;
+            case 'X': return 10;
+            case 'L': return 50;
+            case 'C': return 100;
+            case 'D': return 500;
+            case 'M': return 1000;
+            default: return 0;
+        }
+    }
+}
+```
+
+## 2.[[14. 最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/)]
 
 **描述**
 
@@ -53,7 +145,68 @@ class Solution {
 }
 ```
 
-## 2.[[28. 实现 strStr()](https://leetcode-cn.com/problems/implement-strstr/)]
+## 3.[[20. 有效的括号](https://leetcode-cn.com/problems/valid-parentheses/)]
+
+**描述**
+
+给定一个只包括 '('，')'，'{'，'}'，'['，']' 的字符串，判断字符串是否有效。
+
+有效字符串需满足：
+
+- 左括号必须用相同类型的右括号闭合。
+- 左括号必须以正确的顺序闭合。
+
+注意空字符串可被认为是有效字符串。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "()"
+输出: true
+```
+
+**示例 2：**
+
+```
+输入: "()[]{}"
+输出: true
+```
+
+**示例 3：**
+
+```
+输入: "(]"
+输出: false
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean isValid(String s) {
+        if(s.isEmpty()) return true;
+        Stack<Character> stack = new Stack<Character>();
+        for(char c : s.toCharArray()){
+            if(c == '('){
+                stack.push(')');
+            }else if(c == '['){
+                stack.push(']');
+            }else if(c == '{'){
+                stack.push('}');
+            }else if(stack.isEmpty() || c != stack.pop()){
+                return false;
+            }
+        }
+        return stack.isEmpty();
+    }
+}
+```
+
+## 4.[[28. 实现 strStr()](https://leetcode-cn.com/problems/implement-strstr/)]
 
 **描述**
 
@@ -77,6 +230,12 @@ class Solution {
 输出: -1
 ```
 
+**说明**
+
+当 needle 是空字符串时，我们应当返回什么值呢？这是一个在面试中很好的问题。
+
+对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与C语言的 strstr() 以及 Java的 indexOf() 定义相符。
+
 **题解**
 
 **Java**
@@ -96,13 +255,240 @@ class Solution {
 }
 ```
 
-**说明**
+## 5.[[38. 外观数列](https://leetcode-cn.com/problems/count-and-say/)]
 
-当 needle 是空字符串时，我们应当返回什么值呢？这是一个在面试中很好的问题。
+**描述**
 
-对于本题而言，当 needle 是空字符串时我们应当返回 0 。这与C语言的 strstr() 以及 Java的 indexOf() 定义相符。
+给定一个正整数 n ，输出外观数列的第 n 项。
 
-## 3.[[344. 反转字符串](https://leetcode-cn.com/problems/reverse-string/)]
+「外观数列」是一个整数序列，从数字 1 开始，序列中的每一项都是对前一项的描述。
+
+你可以将其视作是由递归公式定义的数字字符串序列：
+
+- countAndSay(1) = "1"
+- countAndSay(n) 是对 countAndSay(n-1) 的描述，然后转换成另一个数字字符串。
+
+前五项如下：
+
+```
+1.     1
+2.     11
+3.     21
+4.     1211
+5.     111221
+第一项是数字 1 
+描述前一项，这个数是 1 即 “ 一 个 1 ”，记作 "11"
+描述前一项，这个数是 11 即 “ 二 个 1 ” ，记作 "21"
+描述前一项，这个数是 21 即 “ 一 个 2 + 一 个 1 ” ，记作 "1211"
+描述前一项，这个数是 1211 即 “ 一 个 1 + 一 个 2 + 二 个 1 ” ，记作 "111221"
+```
+
+要 描述 一个数字字符串，首先要将字符串分割为 最小 数量的组，每个组都由连续的最多 相同字符 组成。然后对于每个组，先描述字符的数量，然后描述字符，形成一个描述组。要将描述转换为数字字符串，先将每组中的字符数量用数字替换，再将所有描述组连接起来。
+
+**示例**
+
+**示例 1:**
+
+```
+输入：n = 1
+输出："1"
+解释：这是一个基本样例。
+```
+
+**示例 2：**
+
+```
+输入：n = 4
+输出："1211"
+解释：
+countAndSay(1) = "1"
+countAndSay(2) = 读 "1" = 一 个 1 = "11"
+countAndSay(3) = 读 "11" = 二 个 1 = "21"
+countAndSay(4) = 读 "21" = 一 个 2 + 一 个 1 = "12" + "11" = "1211"
+```
+
+**提示**
+
+- `1 <= n <= 30`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String countAndSay(int n) {
+        if(n == 1) return "1";
+        // 使用递归
+        String ans = countAndSay(n-1);
+        StringBuilder sb = new StringBuilder(); 
+        for(int left=0, right=0; right<=ans.length();right++){
+            if(right == ans.length() || ans.charAt(left) != ans.charAt(right)){
+                sb.append(right-left).append(ans.charAt(left));
+                left = right;
+            }
+        }
+        return sb.toString();
+    }
+}
+```
+
+## 6.[[58. 最后一个单词的长度](https://leetcode-cn.com/problems/length-of-last-word/)]
+
+**描述**
+
+给定一个仅包含大小写字母和空格 ' ' 的字符串 s，返回其最后一个单词的长度。如果字符串从左向右滚动显示，那么最后一个单词就是最后出现的单词。
+
+如果不存在最后一个单词，请返回 0 。
+
+说明：一个单词是指仅由字母组成、不包含任何空格字符的 最大子字符串。
+
+**示例**
+
+**示例 1:**
+
+```
+输入: "Hello World"
+输出: 5
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int lengthOfLastWord(String s) {
+        int ans = 0;
+        boolean is = false;
+        for(int i=s.length()-1; i>=0; i--){
+            if(is && s.charAt(i) == ' '){
+                return ans;
+            }else if(s.charAt(i) != ' '){
+                is = true;
+                ans++;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 7.[[67. 二进制求和](https://leetcode-cn.com/problems/add-binary/)]
+
+**描述**
+
+给你两个二进制字符串，返回它们的和（用二进制表示）。
+
+输入为 **非空** 字符串且只包含数字 `1` 和 `0`。
+
+**示例**
+
+**示例 1:**
+
+```
+输入: a = "11", b = "1"
+输出: "100"
+```
+
+**示例 2:**
+
+```
+输入: a = "1010", b = "1011"
+输出: "10101"
+```
+
+**提示**
+
+- 每个字符串仅由字符 `'0'` 或 `'1'` 组成。
+- `1 <= a.length, b.length <= 10^4`
+- 字符串如果不是 `"0"` ，就都不含前导零。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String addBinary(String a, String b) {
+        StringBuilder sb = new StringBuilder();
+        if(a.length() < b.length()){
+            String t = a;
+            a = b;
+            b = t;
+        }
+        int aIndex = a.length() - 1;
+        int bIndex = b.length() - 1;
+        // 进位
+        int tmp = 0;
+        while(aIndex >= 0){
+            // 有1就累加进位
+            if(a.charAt(aIndex--) == '1') tmp++;
+            if(bIndex >= 0 && b.charAt(bIndex--) == '1') tmp++;
+            sb.append(tmp % 2);
+            tmp /= 2; 
+        }
+        if(tmp == 1) sb.append(1);
+        // 最后翻转
+        return sb.reverse().toString();
+    }
+}
+```
+
+## 8.[[125. 验证回文串](https://leetcode-cn.com/problems/valid-palindrome/)]
+
+**描述**
+
+给定一个字符串，验证它是否是回文串，只考虑字母和数字字符，可以忽略字母的大小写。
+
+**说明：**本题中，我们将空字符串定义为有效的回文串。
+
+**示例**
+
+**示例 1:**
+
+```
+输入: "A man, a plan, a canal: Panama"
+输出: true
+```
+
+**示例 2:**
+
+```
+输入: "race a car"
+输出: false
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 从两端遍历比较
+    public boolean isPalindrome(String s) {
+        if(s.length() < 2) return true;
+        int left = 0;
+        int right = s.length() - 1;
+        while(left <= right){
+            while(left < right && !Character.isLetterOrDigit(s.charAt(left))){
+                left++;
+            }
+            while(left < right && !Character.isLetterOrDigit(s.charAt(right))){
+                right--;
+            }
+            if(Character.toLowerCase(s.charAt(left)) != Character.toLowerCase(s.charAt(right))){
+                return false;
+            }
+            left++;
+            right--;
+        }
+        return true;
+    }
+}
+```
+
+## 9.[[344. 反转字符串](https://leetcode-cn.com/problems/reverse-string/)]
 
 **描述**
 
@@ -114,14 +500,14 @@ class Solution {
 
 **示例**
 
-**示例 1：**
+**示例 1:**
 
 ```
 输入：["h","e","l","l","o"]
 输出：["o","l","l","e","h"]
 ```
 
-**示例 2：**
+**示例 2:**
 
 ```
 输入：["H","a","n","n","a","h"]
@@ -134,21 +520,523 @@ class Solution {
 
 ```java
 class Solution {
+    // 两端遍历, 互换两端字符
     public void reverseString(char[] s) {
-        int left = 0;
-        int right = s.length-1;
-        while(left < right){
+        int left = 0, right = s.length-1;
+        while(left <= right){
             char tmp = s[left];
-            s[left] = s[right];
-            s[right] = tmp;
-            left++;
-            right--;
+            s[left++] = s[right];
+            s[right--] = tmp;
+        }    
+    }
+}
+```
+
+## 10.[[345. 反转字符串中的元音字母](https://leetcode-cn.com/problems/reverse-vowels-of-a-string/)]
+
+**描述**
+
+编写一个函数，以字符串作为输入，反转该字符串中的元音字母。
+
+**示例**
+
+**示例 1:**
+
+```
+输入："hello"
+输出："holle"
+```
+
+**示例 2:**
+
+```
+输入："leetcode"
+输出："leotcede"
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String reverseVowels(String s) {
+        int left = 0, right = s.length()-1;
+        char[] array = s.toCharArray();
+        while(left <= right){
+            while(left < right && !isAEIOU(array[left])){
+                left++;
+            }
+            while(left < right && !isAEIOU(array[right])){
+                right--;
+            }
+            char c = array[left];
+            array[left++] = array[right];
+            array[right--] = c;
+        }
+        return new String(array);
+    }
+
+    public boolean isAEIOU(char c){
+        if(c == 'a' || c == 'A' ||
+            c == 'e' || c == 'E' ||
+                c == 'i' || c == 'I' ||
+                    c == 'o' || c == 'O' ||
+                        c == 'u' || c == 'U'){
+            return true;
+        }
+        return false;
+    }
+}
+```
+
+## 11.[[383. 赎金信](https://leetcode-cn.com/problems/ransom-note/)]
+
+**描述**
+
+给定一个赎金信 (ransom) 字符串和一个杂志(magazine)字符串，判断第一个字符串 ransom 能不能由第二个字符串 magazines 里面的字符构成。如果可以构成，返回 true ；否则返回 false。
+
+(题目说明：为了不暴露赎金信字迹，要从杂志上搜索各个需要的字母，组成单词来表达意思。杂志字符串中的每个字符只能在赎金信字符串中使用一次。)
+
+**注意：**
+
+你可以假设两个字符串均只含有小写字母。
+
+```
+canConstruct("a", "b") -> false
+canConstruct("aa", "ab") -> false
+canConstruct("aa", "aab") -> true
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 桶排序
+    public boolean canConstruct(String ransomNote, String magazine) {
+        int[] bucket = new int[26];
+        for(int i=0; i<magazine.length(); i++){
+            bucket[magazine.charAt(i) - 'a']++;
+        }
+        for(int i=0; i<ransomNote.length(); i++){
+            char c = ransomNote.charAt(i);
+            if(bucket[c - 'a'] == 0){
+                return false;
+            }else{
+                bucket[c - 'a']--;
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 12.[[387. 字符串中的第一个唯一字符](https://leetcode-cn.com/problems/first-unique-character-in-a-string/)]
+
+**描述**
+
+给定一个字符串，找到它的第一个不重复的字符，并返回它的索引。如果不存在，则返回 -1。
+
+**示例**
+
+**示例 1：**
+
+```
+s = "leetcode"
+返回 0
+
+s = "loveleetcode"
+返回 2
+```
+
+**提示：**你可以假定该字符串只包含小写字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 桶排序
+    public int firstUniqChar(String s) {
+        int[] bucket = new int[26];
+        char[] chars = s.toCharArray();
+        for(char c : chars){
+            bucket[c - 'a']++;
+        }
+        for(int i=0; i<chars.length; i++){
+            if(bucket[chars[i] - 'a'] == 1){
+                return i;
+            }
+        }
+        return -1;
+        
+    }
+}
+```
+
+## 13.[[415. 字符串相加](https://leetcode-cn.com/problems/add-strings/)]
+
+**描述**
+
+给定两个字符串形式的非负整数 `num1` 和`num2` ，计算它们的和。
+
+**提示：**
+
+- num1 和num2 的长度都小于 5100
+- num1 和num2 都只包含数字 0-9
+- num1 和num2 都不包含任何前导零
+- 你不能使用任何內建 BigInteger 库， 也不能直接将输入的字符串转换为整数形式
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String addStrings(String num1, String num2) {
+        if(num1.length() < num2.length()){
+            String tmp = num1;
+            num1 = num2;
+            num2 = tmp;
+        }
+        char[] array1 = num1.toCharArray();
+        char[] array2 = num2.toCharArray();
+        StringBuilder sb = new StringBuilder();
+        int index1 = array1.length-1;
+        int index2 = array2.length-1;
+        int tmp = 0;
+        while(index1 >= 0){
+            tmp += array1[index1--] - '0';
+            if(index2 >= 0) tmp += array2[index2--] - '0';
+            sb.append(tmp % 10);
+            tmp /= 10;
+        }
+        if(tmp == 1) sb.append(1);
+        return sb.reverse().toString();
+    }
+}
+```
+
+## 14.[[434. 字符串中的单词数](https://leetcode-cn.com/problems/number-of-segments-in-a-string/)]
+
+**描述**
+
+统计字符串中的单词个数，这里的单词指的是连续的不是空格的字符。
+
+请注意，你可以假定字符串里不包括任何不可打印的字符。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "Hello, my name is John"
+输出: 5
+解释: 这里的单词是指连续的不是空格的字符，所以 "Hello," 算作 1 个单词。
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int countSegments(String s) {
+        int ans = 0;
+        int count = 0;
+        for(int i=0; i<s.length(); i++){
+            if(s.charAt(i) == ' '){
+                if(count > 0){
+                    ans++;
+                    count = 0;
+                }
+            }else{
+                count++;
+            }
+        }
+        if(count > 0) ans++;
+        return ans;
+    }
+}
+```
+
+## 15.[[459. 重复的子字符串](https://leetcode-cn.com/problems/repeated-substring-pattern/)]
+
+**描述**
+
+给定一个非空的字符串，判断它是否可以由它的一个子串重复多次构成。给定的字符串只含有小写英文字母，并且长度不超过10000。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "abab"
+输出: True
+解释: 可由子字符串 "ab" 重复两次构成。
+```
+
+**示例 2：**
+
+```
+输入: "aba"
+输出: False
+```
+
+**示例 3：**
+
+```
+输入: "abcabcabcabc"
+输出: True
+解释: 可由子字符串 "abc" 重复四次构成。 (或者子字符串 "abcabc" 重复两次构成。)
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // abab  + abab = abababab
+    // 因为abab是由ab重复两次组成, 所以abababab中掐头去尾查找,a(头)+ babababa +b(尾)中一定包含原字符串abab
+    public boolean repeatedSubstringPattern(String s) {
+        return (s + s).indexOf(s, 1) != s.length();
+    }
+}
+```
+
+## 16.[[520. 检测大写字母](https://leetcode-cn.com/problems/detect-capital/)]
+
+**描述**
+
+给定一个单词，你需要判断单词的大写使用是否正确。
+
+我们定义，在以下情况时，单词的大写用法是正确的：
+
+- 全部字母都是大写，比如"USA"。
+- 单词中所有字母都不是大写，比如"leetcode"。
+- 如果单词不只含有一个字母，只有首字母大写， 比如 "Google"。
+
+否则，我们定义这个单词没有正确使用大写字母。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "USA"
+输出: True
+```
+
+**示例 2：**
+
+```
+输入: "FlaG"
+输出: False
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean detectCapitalUse(String word) {
+        if(word.length() == 1) return true;
+        // 记录大写字母的数量
+        int count = 0;
+        // 记录首字母是否大写
+        boolean isFirstBig = false;
+        for(int i=0; i<word.length(); i++){
+            if(i == 0 && word.charAt(i) < 'a'){
+                isFirstBig = true;
+                count++;
+            }else if(word.charAt(i) < 'a'){
+                count++;
+            }
+        }
+        // 如果首字母大写 大写字母 == 0 或者 全部是大写字母 返回true
+        // 如果没有大写字母, 返回true
+        // 其余情况返回false
+        if(isFirstBig && (count == 1 || count == word.length()) || count == 0){
+            return true;
+        }else{
+            return false;
         }
     }
 }
 ```
 
-## 4.[[557. 反转字符串中的单词 III](https://leetcode-cn.com/problems/reverse-words-in-a-string-iii/)]
+## 17.[[521. 最长特殊序列 Ⅰ](https://leetcode-cn.com/problems/longest-uncommon-subsequence-i/)]
+
+**描述**
+
+给你两个字符串，请你从这两个字符串中找出最长的特殊序列。
+
+「最长特殊序列」定义如下：该序列为某字符串独有的最长子序列（即不能是其他字符串的子序列）。
+
+子序列 可以通过删去字符串中的某些字符实现，但不能改变剩余字符的相对顺序。空序列为所有字符串的子序列，任何字符串为其自身的子序列。
+
+输入为两个字符串，输出最长特殊序列的长度。如果不存在，则返回 -1。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "aba", "cdc"
+输出: 3
+解释: 最长特殊序列可为 "aba" (或 "cdc")，两者均为自身的子序列且不是对方的子序列。
+```
+
+**示例 2：**
+
+```
+输入：a = "aaa", b = "bbb"
+输出：3
+```
+
+**示例 3：**
+
+```
+输入：a = "aaa", b = "aaa"
+输出：-1
+```
+
+**提示：**
+
+1. 两个字符串长度均处于区间 `[1 - 100]` 。
+2. 字符串中的字符仅含有 `'a'~'z'` 。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int findLUSlength(String a, String b) {
+        // 如果两个字符串完全相等,  不存在特殊序列, 返回-1
+        // 如果两个字符串长度相同, 又不相等, 那字符串本身, 就是最长特殊序列, 返回 s.length()
+        // 如果两个字符串长度不相同, 那么较长的字符串是最长特殊序列
+        if(a.equals(b)) return -1;
+        return Math.max(a.length(), b.length());
+    }
+}
+```
+
+## 18.[[541. 反转字符串 II](https://leetcode-cn.com/problems/reverse-string-ii/)]
+
+**描述**
+
+给定一个字符串 s 和一个整数 k，你需要对从字符串开头算起的每隔 2k 个字符的前 k 个字符进行反转。
+
+如果剩余字符少于 k 个，则将剩余字符全部反转。
+如果剩余字符小于 2k 但大于或等于 k 个，则反转前 k 个字符，其余字符保持原样。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: s = "abcdefg", k = 2
+输出: "bacdfeg"
+```
+
+**提示：**
+
+1. 该字符串只包含小写英文字母。
+2. 给定字符串的长度和 `k` 在 `[1, 10000]` 范围内。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String reverseStr(String s, int k) {
+        int i;
+        char[] chars = s.toCharArray();
+        // 每次遍历2*k, 并将前k个反转
+        for(i=0; i<chars.length-2*k; i+=2*k){
+            swap(chars, i, i+k-1);
+        }
+        // 查看最后剩余多少个, 大于k  小于2k, 翻转k个
+        // 小于k个, 就翻转剩余的全部
+        if(chars.length - i >= k){
+            swap(chars, i, i+k-1);
+        }else{
+            swap(chars, i, chars.length-1);
+        }
+        return new String(chars);
+    }
+
+    public void swap(char[] chars, int left, int right){
+        while(left <= right){
+            char tmp = chars[left];
+            chars[left++] = chars[right];
+            chars[right--] = tmp;
+        }
+    }
+}
+```
+
+## 19.[[551. 学生出勤记录 I](https://leetcode-cn.com/problems/student-attendance-record-i/)]
+
+**描述**
+
+给定一个字符串来代表一个学生的出勤记录，这个记录仅包含以下三个字符：
+
+- 'A' : Absent，缺勤
+- 'L' : Late，迟到
+- 'P' : Present，到场
+
+如果一个学生的出勤记录中不超过一个'A'(缺勤)并且不超过两个连续的'L'(迟到),那么这个学生会被奖赏。
+
+你需要根据这个学生的出勤记录判断他是否会被奖赏。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "PPALLP"
+输出: True
+```
+
+**示例 2：**
+
+```
+输入: "PPALLL"
+输出: False
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean checkRecord(String s) {
+        // 记录缺勤次数
+        int ACount = 0;
+        for(int i=0; i<s.length(); i++){
+            if(s.charAt(i) == 'A'){
+                ACount++;
+                if(ACount > 1) return false;
+             // 比较连续三个数是否是L
+            }else if(i<s.length()-2 && s.charAt(i) == 'L' && s.charAt(i+1) == 'L' && s.charAt(i+2) == 'L'){
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 20.[[557. 反转字符串中的单词 III](https://leetcode-cn.com/problems/reverse-words-in-a-string-iii/)]
 
 **描述**
 
@@ -174,11 +1062,20 @@ class Solution {
 ```java
 class Solution {
     public String reverseWords(String s) {
-        String[] ss = s.split(" ");
-        for(int i=0; i<ss.length; i++){
-            ss[i] = new StringBuilder(ss[i]).reverse().toString();
+        char[] chars = s.toCharArray();
+        for(int i=0, j=0; j<=chars.length; j++){
+            // 遇到空格, 或者j是最后一位, 翻转i到j的字符
+            if(j == chars.length || chars[j] == ' '){
+                int left = i, right = j-1;
+                while(left <= right){
+                    char tmp = chars[left];
+                    chars[left++] = chars[right];
+                    chars[right--] = tmp;
+                }
+                i = j+1;
+            }
         }
-        return String.join(" ", ss);
+        return new String(chars);
     }
 }
 ```
