--- a/面试/算法/数组/中等/数组-中等(1-20).md
+++ b/面试/算法/数组/中等/数组-中等(1-20).md
@@ -419,7 +419,7 @@ class Solution {
 }
 ```
 
-## 5.[[33. 搜索旋转排序数组](https://leetcode-cn.com/problems/search-in-rotated-sorted-array/)]
+## 6.[[33. 搜索旋转排序数组](https://leetcode-cn.com/problems/search-in-rotated-sorted-array/)]
 
 **描述**
 
@@ -500,6 +500,147 @@ class Solution {
             swap(nums, left, right);
             left++;
             right--;
+        }
+    }
+}
+```
+
+## 7.[[34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/)]
+
+**描述**
+
+给你一个整数数组 nums ，和一个整数 target 。
+
+该整数数组原本是按升序排列，但输入时在预先未知的某个点上进行了旋转。（例如，数组 [0,1,2,4,5,6,7] 可能变为 [4,5,6,7,0,1,2] ）。
+
+请你在数组中搜索 target ，如果数组中存在这个目标值，则返回它的索引，否则返回 -1 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: nums = [5,7,7,8,8,10], target = 8
+输出: [3,4]
+```
+
+**示例 2：**
+
+```
+输入: nums = [5,7,7,8,8,10], target = 6
+输出: [-1,-1]
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 二分查找, 找到目标数的位置后, 向两边扩散查找
+    public int[] searchRange(int[] nums, int target) {
+        int[] ans = new int[2];
+        ans[0] = -1;
+        ans[1] = -1;
+        int left = 0, right = nums.length-1;
+        while(left <= right){
+            int mid = left + (right - left) / 2;
+            if(nums[mid] > target){
+                right = mid - 1;
+            }else if(nums[mid] < target){
+                left = mid + 1;
+            }else{
+                int sL = mid;
+                while(sL >= 0 && nums[sL] == target){
+                    sL--;
+                }
+                ans[0] = sL + 1;
+                int sR = mid;
+                while(sR <= nums.length-1 && nums[sR] == target){
+                    sR++;
+                }
+                ans[1] = sR - 1;
+                break;
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 8.[[39. 组合总和](https://leetcode-cn.com/problems/combination-sum/)]
+
+**描述**
+
+给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
+
+candidates 中的数字可以无限制重复被选取。
+
+**说明：**
+
+- 所有数字（包括 target）都是正整数。
+- 解集不能包含重复的组合。 
+
+**示例**
+
+**示例 1：**
+
+```
+输入：candidates = [2,3,6,7], target = 7,
+所求解集为：
+[
+  [7],
+  [2,2,3]
+]
+```
+
+**示例 2：**
+
+```
+输入：candidates = [2,3,5], target = 8,
+所求解集为：
+[
+  [2,2,2,2],
+  [2,3,3],
+  [3,5]
+]
+```
+
+**提示：**
+
+- 1 <= candidates.length <= 30
+- 1 <= candidates[i] <= 200
+- candidate 中的每个元素都是独一无二的。
+- 1 <= target <= 500
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        List<List<Integer>> ans = new ArrayList<List<Integer>>();
+        List<Integer> combine = new ArrayList<Integer>();
+        dfs(candidates, target, ans, combine, 0);
+        return ans;
+    }
+
+    public void dfs(int[] candidates, int target, List<List<Integer>> ans, List<Integer> combine, int idx) {
+        if (idx == candidates.length) {
+            return;
+        }
+        if (target == 0) {
+            ans.add(new ArrayList<Integer>(combine));
+            return;
+        }
+        // 直接跳过
+        dfs(candidates, target, ans, combine, idx + 1);
+        // 选择当前数
+        if (target - candidates[idx] >= 0) {
+            combine.add(candidates[idx]);
+            dfs(candidates, target - candidates[idx], ans, combine, idx);
+            combine.remove(combine.size() - 1);
         }
     }
 }
