--- a/面试/算法/字符串/简单/字符串-简单(1-20).md
+++ b/面试/算法/字符串/简单/字符串-简单(1-20).md
@@ -488,7 +488,11 @@ class Solution {
 }
 ```
 
-## 9.[[344. 反转字符串](https://leetcode-cn.com/problems/reverse-string/)]
+## 9.[[157.用 Read4 读取 N 个字符](https://leetcode-cn.com/problems/read-n-characters-given-read4)]
+
+## 10.[[293翻转游戏](https://leetcode-cn.com/problems/flip-game)]
+
+## 11.[[344. 反转字符串](https://leetcode-cn.com/problems/reverse-string/)]
 
 **描述**
 
@@ -532,7 +536,7 @@ class Solution {
 }
 ```
 
-## 10.[[345. 反转字符串中的元音字母](https://leetcode-cn.com/problems/reverse-vowels-of-a-string/)]
+## 12.[[345. 反转字符串中的元音字母](https://leetcode-cn.com/problems/reverse-vowels-of-a-string/)]
 
 **描述**
 
@@ -590,7 +594,7 @@ class Solution {
 }
 ```
 
-## 11.[[383. 赎金信](https://leetcode-cn.com/problems/ransom-note/)]
+## 13.[[383. 赎金信](https://leetcode-cn.com/problems/ransom-note/)]
 
 **描述**
 
@@ -633,7 +637,7 @@ class Solution {
 }
 ```
 
-## 12.[[387. 字符串中的第一个唯一字符](https://leetcode-cn.com/problems/first-unique-character-in-a-string/)]
+## 14.[[387. 字符串中的第一个唯一字符](https://leetcode-cn.com/problems/first-unique-character-in-a-string/)]
 
 **描述**
 
@@ -677,7 +681,9 @@ class Solution {
 }
 ```
 
-## 13.[[415. 字符串相加](https://leetcode-cn.com/problems/add-strings/)]
+## 15.[[408.有效单词缩写](https://leetcode-cn.com/problems/valid-word-abbreviation) ]
+
+## 16.[[415. 字符串相加](https://leetcode-cn.com/problems/add-strings/)]
 
 **描述**
 
@@ -720,7 +726,7 @@ class Solution {
 }
 ```
 
-## 14.[[434. 字符串中的单词数](https://leetcode-cn.com/problems/number-of-segments-in-a-string/)]
+## 17.[[434. 字符串中的单词数](https://leetcode-cn.com/problems/number-of-segments-in-a-string/)]
 
 **描述**
 
@@ -763,7 +769,7 @@ class Solution {
 }
 ```
 
-## 15.[[459. 重复的子字符串](https://leetcode-cn.com/problems/repeated-substring-pattern/)]
+## 18.[[459. 重复的子字符串](https://leetcode-cn.com/problems/repeated-substring-pattern/)]
 
 **描述**
 
@@ -808,7 +814,7 @@ class Solution {
 }
 ```
 
-## 16.[[520. 检测大写字母](https://leetcode-cn.com/problems/detect-capital/)]
+## 19.[[520. 检测大写字母](https://leetcode-cn.com/problems/detect-capital/)]
 
 **描述**
 
@@ -870,7 +876,7 @@ class Solution {
 }
 ```
 
-## 17.[[521. 最长特殊序列 Ⅰ](https://leetcode-cn.com/problems/longest-uncommon-subsequence-i/)]
+## 20.[[521. 最长特殊序列 Ⅰ](https://leetcode-cn.com/problems/longest-uncommon-subsequence-i/)]
 
 **描述**
 
@@ -923,159 +929,6 @@ class Solution {
         // 如果两个字符串长度不相同, 那么较长的字符串是最长特殊序列
         if(a.equals(b)) return -1;
         return Math.max(a.length(), b.length());
-    }
-}
-```
-
-## 18.[[541. 反转字符串 II](https://leetcode-cn.com/problems/reverse-string-ii/)]
-
-**描述**
-
-给定一个字符串 s 和一个整数 k，你需要对从字符串开头算起的每隔 2k 个字符的前 k 个字符进行反转。
-
-如果剩余字符少于 k 个，则将剩余字符全部反转。
-如果剩余字符小于 2k 但大于或等于 k 个，则反转前 k 个字符，其余字符保持原样。
-
-**示例**
-
-**示例 1：**
-
-```
-输入: s = "abcdefg", k = 2
-输出: "bacdfeg"
-```
-
-**提示：**
-
-1. 该字符串只包含小写英文字母。
-2. 给定字符串的长度和 `k` 在 `[1, 10000]` 范围内。
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public String reverseStr(String s, int k) {
-        int i;
-        char[] chars = s.toCharArray();
-        // 每次遍历2*k, 并将前k个反转
-        for(i=0; i<chars.length-2*k; i+=2*k){
-            swap(chars, i, i+k-1);
-        }
-        // 查看最后剩余多少个, 大于k  小于2k, 翻转k个
-        // 小于k个, 就翻转剩余的全部
-        if(chars.length - i >= k){
-            swap(chars, i, i+k-1);
-        }else{
-            swap(chars, i, chars.length-1);
-        }
-        return new String(chars);
-    }
-
-    public void swap(char[] chars, int left, int right){
-        while(left <= right){
-            char tmp = chars[left];
-            chars[left++] = chars[right];
-            chars[right--] = tmp;
-        }
-    }
-}
-```
-
-## 19.[[551. 学生出勤记录 I](https://leetcode-cn.com/problems/student-attendance-record-i/)]
-
-**描述**
-
-给定一个字符串来代表一个学生的出勤记录，这个记录仅包含以下三个字符：
-
-- 'A' : Absent，缺勤
-- 'L' : Late，迟到
-- 'P' : Present，到场
-
-如果一个学生的出勤记录中不超过一个'A'(缺勤)并且不超过两个连续的'L'(迟到),那么这个学生会被奖赏。
-
-你需要根据这个学生的出勤记录判断他是否会被奖赏。
-
-**示例**
-
-**示例 1：**
-
-```
-输入: "PPALLP"
-输出: True
-```
-
-**示例 2：**
-
-```
-输入: "PPALLL"
-输出: False
-```
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public boolean checkRecord(String s) {
-        // 记录缺勤次数
-        int ACount = 0;
-        for(int i=0; i<s.length(); i++){
-            if(s.charAt(i) == 'A'){
-                ACount++;
-                if(ACount > 1) return false;
-             // 比较连续三个数是否是L
-            }else if(i<s.length()-2 && s.charAt(i) == 'L' && s.charAt(i+1) == 'L' && s.charAt(i+2) == 'L'){
-                return false;
-            }
-        }
-        return true;
-    }
-}
-```
-
-## 20.[[557. 反转字符串中的单词 III](https://leetcode-cn.com/problems/reverse-words-in-a-string-iii/)]
-
-**描述**
-
-给定一个字符串，你需要反转字符串中每个单词的字符顺序，同时仍保留空格和单词的初始顺序。
-
-**示例**
-
-**示例 1：**
-
-```
-输入："Let's take LeetCode contest"
-输出："s'teL ekat edoCteeL tsetnoc"
-```
-
-**提示：**
-
-- 在字符串中，每个单词由单个空格分隔，并且字符串中不会有任何额外的空格。
-
-**题解**
-
-**Java**
-
-```java
-class Solution {
-    public String reverseWords(String s) {
-        char[] chars = s.toCharArray();
-        for(int i=0, j=0; j<=chars.length; j++){
-            // 遇到空格, 或者j是最后一位, 翻转i到j的字符
-            if(j == chars.length || chars[j] == ' '){
-                int left = i, right = j-1;
-                while(left <= right){
-                    char tmp = chars[left];
-                    chars[left++] = chars[right];
-                    chars[right--] = tmp;
-                }
-                i = j+1;
-            }
-        }
-        return new String(chars);
     }
 }
 ```
