--- a/面试/算法/字符串/简单/字符串-简单(21-40).md
+++ b/面试/算法/字符串/简单/字符串-简单(21-40).md
@@ -8,7 +8,160 @@
 
 # 字符串-简单(1-20)
 
-## 1.[[606. 根据二叉树创建字符串](https://leetcode-cn.com/problems/construct-string-from-binary-tree/)]
+## 21.[[541. 反转字符串 II](https://leetcode-cn.com/problems/reverse-string-ii/)]
+
+**描述**
+
+给定一个字符串 s 和一个整数 k，你需要对从字符串开头算起的每隔 2k 个字符的前 k 个字符进行反转。
+
+如果剩余字符少于 k 个，则将剩余字符全部反转。
+如果剩余字符小于 2k 但大于或等于 k 个，则反转前 k 个字符，其余字符保持原样。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: s = "abcdefg", k = 2
+输出: "bacdfeg"
+```
+
+**提示：**
+
+1. 该字符串只包含小写英文字母。
+2. 给定字符串的长度和 `k` 在 `[1, 10000]` 范围内。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String reverseStr(String s, int k) {
+        int i;
+        char[] chars = s.toCharArray();
+        // 每次遍历2*k, 并将前k个反转
+        for(i=0; i<chars.length-2*k; i+=2*k){
+            swap(chars, i, i+k-1);
+        }
+        // 查看最后剩余多少个, 大于k  小于2k, 翻转k个
+        // 小于k个, 就翻转剩余的全部
+        if(chars.length - i >= k){
+            swap(chars, i, i+k-1);
+        }else{
+            swap(chars, i, chars.length-1);
+        }
+        return new String(chars);
+    }
+
+    public void swap(char[] chars, int left, int right){
+        while(left <= right){
+            char tmp = chars[left];
+            chars[left++] = chars[right];
+            chars[right--] = tmp;
+        }
+    }
+}
+```
+
+## 22.[[551. 学生出勤记录 I](https://leetcode-cn.com/problems/student-attendance-record-i/)]
+
+**描述**
+
+给定一个字符串来代表一个学生的出勤记录，这个记录仅包含以下三个字符：
+
+- 'A' : Absent，缺勤
+- 'L' : Late，迟到
+- 'P' : Present，到场
+
+如果一个学生的出勤记录中不超过一个'A'(缺勤)并且不超过两个连续的'L'(迟到),那么这个学生会被奖赏。
+
+你需要根据这个学生的出勤记录判断他是否会被奖赏。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "PPALLP"
+输出: True
+```
+
+**示例 2：**
+
+```
+输入: "PPALLL"
+输出: False
+```
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean checkRecord(String s) {
+        // 记录缺勤次数
+        int ACount = 0;
+        for(int i=0; i<s.length(); i++){
+            if(s.charAt(i) == 'A'){
+                ACount++;
+                if(ACount > 1) return false;
+             // 比较连续三个数是否是L
+            }else if(i<s.length()-2 && s.charAt(i) == 'L' && s.charAt(i+1) == 'L' && s.charAt(i+2) == 'L'){
+                return false;
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 23.[[557. 反转字符串中的单词 III](https://leetcode-cn.com/problems/reverse-words-in-a-string-iii/)]
+
+**描述**
+
+给定一个字符串，你需要反转字符串中每个单词的字符顺序，同时仍保留空格和单词的初始顺序。
+
+**示例**
+
+**示例 1：**
+
+```
+输入："Let's take LeetCode contest"
+输出："s'teL ekat edoCteeL tsetnoc"
+```
+
+**提示：**
+
+- 在字符串中，每个单词由单个空格分隔，并且字符串中不会有任何额外的空格。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String reverseWords(String s) {
+        char[] chars = s.toCharArray();
+        for(int i=0, j=0; j<=chars.length; j++){
+            // 遇到空格, 或者j是最后一位, 翻转i到j的字符
+            if(j == chars.length || chars[j] == ' '){
+                int left = i, right = j-1;
+                while(left <= right){
+                    char tmp = chars[left];
+                    chars[left++] = chars[right];
+                    chars[right--] = tmp;
+                }
+                i = j+1;
+            }
+        }
+        return new Stringchars);
+    }
+}
+```
+
+## 24.[[606. 根据二叉树创建字符串](https://leetcode-cn.com/problems/construct-string-from-binary-tree/)]
 
 **描述**
 
@@ -90,7 +243,7 @@ class Solution {
 }
 ```
 
-## 2.[[657. 机器人能否返回原点](https://leetcode-cn.com/problems/robot-return-to-origin/)]
+## 25.[[657. 机器人能否返回原点](https://leetcode-cn.com/problems/robot-return-to-origin/)]
 
 **描述**
 
@@ -144,3 +297,573 @@ class Solution {
 }
 ```
 
+## 26.[[680. 验证回文字符串 Ⅱ](https://leetcode-cn.com/problems/valid-palindrome-ii/)]
+
+**描述**
+
+给定一个非空字符串 `s`，**最多**删除一个字符。判断是否能成为回文字符串。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "aba"
+输出: True
+```
+
+**示例 2：**
+
+```
+输入: "abca"
+输出: True
+解释: 你可以删除c字符。
+```
+
+**注意:**
+
+1. 字符串只包含从 a-z 的小写字母。字符串的最大长度是50000。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean validPalindrome(String s) {
+        int left = 0, right = s.length() - 1;
+        char[] chars = s.toCharArray();
+        // 循环遍历, 比较两边的字符是否相等
+        while(left < right){
+            char cleft = chars[left], cRight = chars[right];
+            if(cleft == cRight){
+                left++;
+                right--;
+            }else{
+                // 如果不相等, 有两种情况, 一种是, 左边多了一位, 则left + 1 重新循环遍历
+                // 如果再次遇到不相等的情况, 标志位flag1变为false
+                // 第二种情况是右边多了一位, 则right-1, 重新循环遍历
+                // 如果再次遇到不相等的情况, 标志位flag2变为false
+                // 两种情况, 只要一种通过, 则认为是回文字符串
+                boolean flag1 = true, flag2 = true;
+                int i = left, j = right - 1;
+                while(i < j){
+                    cleft = chars[i]; 
+                    cRight = chars[j];
+                    if(cleft != cRight){
+                        flag1 = false;
+                        break;
+                    }
+                    i++;
+                    j--;
+                }
+                i = left + 1;
+                j = right;
+                while(i < j){
+                    cleft = chars[i];
+                    cRight = chars[j];
+                    if(cleft != cRight){
+                        flag2 = false;
+                        break;
+                    }
+                    i++;
+                    j--;
+                }
+                return flag1 || flag2;
+            }
+        }
+        return true;
+    }
+}
+```
+
+## 27.[[696. 计数二进制子串](https://leetcode-cn.com/problems/count-binary-substrings/)]
+
+**描述**
+
+给定一个字符串 s，计算具有相同数量0和1的非空(连续)子字符串的数量，并且这些子字符串中的所有0和所有1都是组合在一起的。
+
+重复出现的子串要计算它们出现的次数。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "00110011"
+输出: 6
+解释: 有6个子串具有相同数量的连续1和0：“0011”，“01”，“1100”，“10”，“0011” 和 “01”。
+
+请注意，一些重复出现的子串要计算它们出现的次数。
+
+另外，“00110011”不是有效的子串，因为所有的0（和1）没有组合在一起。
+```
+
+**示例 2：**
+
+```
+输入: "10101"
+输出: 4
+解释: 有4个子串：“10”，“01”，“10”，“01”，它们具有相同数量的连续1和0。
+```
+
+**注意:**
+
+1. `s.length` 在1到50,000之间。
+2. `s` 只包含“0”或“1”字符。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    // 思路, 0011100011, 遍历该字符串, 算出相同字符数量, 00=>2, 111=>3, 000=>3, 11=>2, 最后结果2,3,3,2
+    // 每个相邻的结果, 取较小的值相加,  2,3=>2, 3,3=>3. 3,2=>2   最后得到2+3+2=8
+    public int countBinarySubstrings(String s) {
+        int ans = 0;
+        int last = 0, i = 0;
+        char[] chars = s.toCharArray();
+        int len = chars.length;
+        while(i < len){
+            int count = 1;
+            char c = chars[i++];
+            // 计算相同的字符数量, 
+            while(i < len && c == chars[i]){
+                count++;
+                i++;
+            }
+            // 与上一个字符的数量, 作比较, 取较小的值相加
+            ans += Math.min(last, count);
+            // 将当前的字符数量, 赋值给last
+            last = count;
+        }
+        return ans;
+    }
+}
+```
+
+## 28.[[709. 转换成小写字母](https://leetcode-cn.com/problems/to-lower-case/)]
+
+**描述**
+
+实现函数 ToLowerCase()，该函数接收一个字符串参数 str，并将该字符串中的大写字母转换成小写字母，之后返回新的字符串。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "Hello"
+输出: "hello"
+```
+
+**示例 2：**
+
+```
+输入: "here"
+输出: "here"
+```
+
+**示例 3：**
+
+```
+输入: "LOVELY"
+输出: "lovely"
+```
+
+**注意:**
+
+1. `s.length` 在1到50,000之间。
+2. `s` 只包含“0”或“1”字符。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String toLowerCase(String str) {
+        char[] chars = str.toCharArray();
+        for(int i=0; i<chars.length; i++){
+            char c = chars[i];
+            if(c <= 'Z' && c >= 'A'){
+                chars[i] += 32;
+            }
+        }
+        return new String(chars);
+    }
+}
+```
+
+## 29.[[758.字符串中的加粗单词](https://leetcode-cn.com/problems/bold-words-in-string)]
+
+## 30.[[788. 旋转数字](https://leetcode-cn.com/problems/rotated-digits/)]
+
+**描述**
+
+我们称一个数 X 为好数, 如果它的每位数字逐个地被旋转 180 度后，我们仍可以得到一个有效的，且和 X 不同的数。要求每位数字都要被旋转。
+
+如果一个数的每位数字被旋转以后仍然还是一个数字， 则这个数是有效的。0, 1, 和 8 被旋转后仍然是它们自己；2 和 5 可以互相旋转成对方（在这种情况下，它们以不同的方向旋转，换句话说，2 和 5 互为镜像）；6 和 9 同理，除了这些以外其他的数字旋转以后都不再是有效的数字。
+
+现在我们有一个正整数 N, 计算从 1 到 N 中有多少个数 X 是好数？
+
+**示例**
+
+**示例 1：**
+
+```
+输入: 10
+输出: 4
+解释: 
+在[1, 10]中有四个好数： 2, 5, 6, 9。
+注意 1 和 10 不是好数, 因为他们在旋转之后不变。
+```
+
+**注意:**
+
+1. N 的取值范围是 `[1, 10000]`。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int rotatedDigits(int N) {
+        int count = 0;
+        for(int i=2; i<=N; i++){
+            int tmp = i;
+            boolean flag = false;
+            // 遍历每一个数字, 中的每一位, 如果有3,4,7则该数字不是好数, 并将标志位置为false, 停止遍历
+            // 如果有2,5,6,9 则将标志位置为true
+            while(tmp != 0){
+                int t = tmp % 10;
+                if(t == 3 || t == 4 || t == 7){
+                    flag = false;
+                    break;
+                }else if(t == 2 || t == 5 || t == 6 || t == 9){
+                    flag = true;
+                }
+                tmp /= 10;
+            }
+            // 如果标志位是true, 说明是好数
+            if(flag) count++;
+        }
+        return count;
+    }
+}
+```
+
+## 31.[[804. 唯一摩尔斯密码词](https://leetcode-cn.com/problems/unique-morse-code-words/)]
+
+**描述**
+
+国际摩尔斯密码定义一种标准编码方式，将每个字母对应于一个由一系列点和短线组成的字符串， 比如: "a" 对应 ".-", "b" 对应 "-...", "c" 对应 "-.-.", 等等。
+
+为了方便，所有26个英文字母对应摩尔斯密码表如下：
+
+[".-","-...","-.-.","-..",".","..-.","--.","....","..",".---","-.-",".-..","--","-.","---",".--.","--.-",".-.","...","-","..-","...-",".--","-..-","-.--","--.."]
+给定一个单词列表，每个单词可以写成每个字母对应摩尔斯密码的组合。例如，"cab" 可以写成 "-.-..--..."，(即 "-.-." + ".-" + "-..." 字符串的结合)。我们将这样一个连接过程称作单词翻译。
+
+返回我们可以获得所有词不同单词翻译的数量。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: words = ["gin", "zen", "gig", "msg"]
+输出: 2
+解释: 
+各单词翻译如下:
+"gin" -> "--...-."
+"zen" -> "--...-."
+"gig" -> "--...--."
+"msg" -> "--...--."
+
+共有 2 种不同翻译, "--...-." 和 "--...--."
+```
+
+**注意:**
+
+1. 单词列表`words` 的长度不会超过 `100`。
+2. 每个单词 `words[i]`的长度范围为 `[1, 12]`。
+3. 每个单词 `words[i]`只包含小写字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int uniqueMorseRepresentations(String[] words) {
+        String[] table = {".-","-...","-.-.","-..",".","..-.","--.","....","..",".---","-.-",".-..","--","-.","---",".--.","--.-",".-.","...","-","..-","...-",".--","-..-","-.--","--.."};
+        Set<String> set = new HashSet<>();
+        // 遍历每个单词的每个字母, 取出数据找到对应的摩斯密码, 转换成字符串后, 放到set中, 最后查看set中值的数量
+        for(String word : words){
+            StringBuilder sb = new StringBuilder();
+            char[] chars = word.toCharArray();
+            for(char c : chars){
+                sb.append(table[c - 'a']);
+            }
+            set.add(sb.toString());
+        } 
+        return set.size();
+    }
+}
+```
+
+## 32.[[819. 最常见的单词](https://leetcode-cn.com/problems/most-common-word/)]
+
+**描述**
+
+给定一个段落 (paragraph) 和一个禁用单词列表 (banned)。返回出现次数最多，同时不在禁用列表中的单词。
+
+题目保证至少有一个词不在禁用列表中，而且答案唯一。
+
+禁用列表中的单词用小写字母表示，不含标点符号。段落中的单词不区分大小写。答案都是小写字母。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: 
+paragraph = "Bob hit a ball, the hit BALL flew far after it was hit."
+banned = ["hit"]
+输出: "ball"
+解释: 
+"hit" 出现了3次，但它是一个禁用的单词。
+"ball" 出现了2次 (同时没有其他单词出现2次)，所以它是段落里出现次数最多的，且不在禁用列表中的单词。 
+注意，所有这些单词在段落里不区分大小写，标点符号需要忽略（即使是紧挨着单词也忽略， 比如 "ball,"）， 
+"hit"不是最终的答案，虽然它出现次数更多，但它在禁用单词列表中。
+```
+
+**注意:**
+
+1. 1 <= 段落长度 <= 1000
+2. 0 <= 禁用单词个数 <= 100
+3. 1 <= 禁用单词长度 <= 10
+4. 答案是唯一的, 且都是小写字母 (即使在 paragraph 里是大写的，即使是一些特定的名词，答案都是小写的。)
+5. paragraph 只包含字母、空格和下列标点符号!?',;.
+6. 不存在没有连字符或者带有连字符的单词。
+7. 单词里只包含字母，不会出现省略号或者其他标点符号。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String mostCommonWord(String paragraph, String[] banned) {
+        // 加一个标点符号的原因是, 让下方的for循环, 最后走一遍里面的else if(word.length() > 0)
+        paragraph += '.';
+        Set<String> set = new HashSet();
+        for(String s : banned){
+            set.add(s);
+        }
+        // 存储对应字符串的数量
+        Map<String, Integer> map = new HashMap();
+        String ans = "";
+        int count = 0;
+        StringBuilder sb = new StringBuilder();
+        // 遍历每一个字符
+        for(char c : paragraph.toCharArray()){
+             // 判断字符是否为字母, 如果是, 就存到StringBuilder中
+            if(Character.isLetter(c)){
+                sb.append(Character.toLowerCase(c));
+                // 如果不是字母, 并且sb长度大于0, 说明不是一个空字符串
+            }else if(sb.length() > 0){
+                // 转换为字符串, 后在set中, 查询该字符串是否被禁用
+                String s = sb.toString();
+                if(!set.contains(s)){
+                    // 如果不被禁用, 从map中, 查询该字符串的数量
+                    int tmp = map.getOrDefault(s, 0) + 1;
+                    map.put(s, tmp);
+                    // 找出数量多的字符串
+                    if(count < tmp){
+                        count = tmp;
+                        ans = s;
+                    }
+                }
+                sb = new StringBuilder();
+            }
+        }
+        return ans;
+    }
+}
+```
+
+## 33.[[824. 山羊拉丁文](https://leetcode-cn.com/problems/goat-latin/)]
+
+**描述**
+
+给定一个由空格分割单词的句子 S。每个单词只包含大写或小写字母。
+
+我们要将句子转换为 “Goat Latin”（一种类似于 猪拉丁文 - Pig Latin 的虚构语言）。
+
+山羊拉丁文的规则如下：
+
+- 如果单词以元音开头（a, e, i, o, u），在单词后添加"ma"。
+  例如，单词"apple"变为"applema"。
+- 如果单词以辅音字母开头（即非元音字母），移除第一个字符并将它放到末尾，之后再添加"ma"。
+  例如，单词"goat"变为"oatgma"。
+- 根据单词在句子中的索引，在单词最后添加与索引相同数量的字母'a'，索引从1开始。
+  例如，在第一个单词后添加"a"，在第二个单词后添加"aa"，以此类推。
+
+返回将 S 转换为山羊拉丁文后的句子。
+
+**示例**
+
+**示例 1：**
+
+```
+输入: "I speak Goat Latin"
+输出: "Imaa peaksmaaa oatGmaaaa atinLmaaaaa"
+```
+
+**示例 2：**
+
+```
+输入: "The quick brown fox jumped over the lazy dog"
+输出: "heTmaa uickqmaaa rownbmaaaa oxfmaaaaa umpedjmaaaaaa overmaaaaaaa hetmaaaaaaaa azylmaaaaaaaaa ogdmaaaaaaaaaa"
+```
+
+**注意:**
+
+1. `S` 中仅包含大小写字母和空格。单词间有且仅有一个空格。
+2. `1 <= S.length <= 150`。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String toGoatLatin(String S) {
+        StringBuilder ans = new StringBuilder();
+        StringBuilder sb = new StringBuilder();
+        int index = 1;
+        // 加一个空格的原因是, 让下方的for循环, 最后走一遍里面的else if(word.length() > 0)
+        S += " ";
+        // 遍历每个字符
+        for(char c : S.toCharArray()){
+            // 非空格时
+            if(Character.isLetter(c)){
+                sb.append(c);
+            // 遇到空格, 判断已经存在的字符串首字母
+            }else if(sb.length() > 0){
+                char first = sb.charAt(0);
+                if(first == 'a' || first == 'A' ||
+                    first == 'e' || first == 'E' ||
+                        first == 'i' || first == 'I' ||
+                            first == 'o' || first == 'O' ||
+                                first == 'u' || first == 'U'){
+                    sb.append("ma");
+                }else{
+                    sb.delete(0, 1).append(first).append("ma");
+                }
+                // 添加a
+                for(int i=0; i<index; i++){
+                    sb.append("a");
+                }
+                ans.append(sb.toString()).append(" ");
+                index++;
+                sb = new StringBuilder();
+            }
+        }
+        // 删掉末尾多余的空格
+        ans.delete(ans.length()-1, ans.length());
+        return ans.toString();
+    }
+}
+```
+
+## 34.[[859. 亲密字符串](https://leetcode-cn.com/problems/buddy-strings/)]
+
+**描述**
+
+给定两个由小写字母构成的字符串 A 和 B ，只要我们可以通过交换 A 中的两个字母得到与 B 相等的结果，就返回 true ；否则返回 false 。
+
+交换字母的定义是取两个下标 i 和 j （下标从 0 开始），只要 i!=j 就交换 A[i] 和 A[j] 处的字符。例如，在 "abcd" 中交换下标 0 和下标 2 的元素可以生成 "cbad" 。
+
+**示例**
+
+**示例 1：**
+
+```
+输入： A = "ab", B = "ba"
+输出： true
+解释： 你可以交换 A[0] = 'a' 和 A[1] = 'b' 生成 "ba"，此时 A 和 B 相等。
+```
+
+**示例 2：**
+
+```
+输入： A = "ab", B = "ab"
+输出： false
+解释： 你只能交换 A[0] = 'a' 和 A[1] = 'b' 生成 "ba"，此时 A 和 B 不相等。
+```
+
+**示例 3：**
+
+```
+输入： A = "aa", B = "aa"
+输出： true
+解释： 你可以交换 A[0] = 'a' 和 A[1] = 'a' 生成 "aa"，此时 A 和 B 相等。
+```
+
+**注意:**
+
+1. `0 <= A.length <= 20000`
+2. `0 <= B.length <= 20000`
+3. `A` 和 `B` 仅由小写字母构成。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean buddyStrings(String A, String B) {
+        if(A.length() != B.length()) return false;
+        // 两种情况
+        // 第一种, A等于B, 此时需要查看A有没有重复的字符, 使用桶排序
+        if(A.equals(B)){
+            int[] bucket = new int[26];
+            for(char c : A.toCharArray()){
+                bucket[c - 'a']++;
+            }
+            for(int count : bucket){
+                if(count > 1) return true;
+            }
+            return false;
+        // 第二种, A不等于B
+        }else{
+            // 找到A和B两处不同的字符, 对应的索引, 分别为first和second
+            int first = -1, second = -1;
+            char[] aChars = A.toCharArray();
+            char[] bChars = B.toCharArray();
+            for(int i=0; i<aChars.length; i++){
+                if(aChars[i] != bChars[i]){
+                    if(first == -1){
+                        first = i;
+                    }else if(second == -1){
+                        second = i;
+                    }else{
+                        // 有第三处不同, 返回false
+                        return false;
+                    }
+                }
+            }
+            // 如果second等于-1, 说明只有一处不同
+            // 在对角比较, 两个索引对应的值
+            return second != -1 && aChars[first] == bChars[second] 
+                && aChars[second] == bChars[first];
+        }
+    }
+}
+```
+
+## 
