--- a/面试/算法/字符串/简单/字符串-简单(21-40).md
+++ b/面试/算法/字符串/简单/字符串-简单(21-40).md
@@ -866,4 +866,208 @@ class Solution {
 }
 ```
 
-## 
+## 35.[[893. 特殊等价字符串组](https://leetcode-cn.com/problems/groups-of-special-equivalent-strings/)]
+
+**描述**
+
+你将得到一个字符串数组 A。
+
+每次移动都可以交换 S 的任意两个偶数下标的字符或任意两个奇数下标的字符。
+
+如果经过任意次数的移动，S == T，那么两个字符串 S 和 T 是 特殊等价 的。
+
+例如，S = "zzxy" 和 T = "xyzz" 是一对特殊等价字符串，因为可以先交换 S[0] 和 S[2]，然后交换 S[1] 和 S[3]，使得 "zzxy" -> "xzzy" -> "xyzz" 。
+
+现在规定，A 的 一组特殊等价字符串 就是 A 的一个同时满足下述条件的非空子集：
+
+- 该组中的每一对字符串都是 特殊等价 的
+- 该组字符串已经涵盖了该类别中的所有特殊等价字符串，容量达到理论上的最大值（也就是说，如果一个字符串不在该组中，那么这个字符串就 不会 与该组内任何字符串特殊等价）
+
+返回 A 中特殊等价字符串组的数量。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：["abcd","cdab","cbad","xyzz","zzxy","zzyx"]
+输出：3
+解释：
+其中一组为 ["abcd", "cdab", "cbad"]，因为它们是成对的特殊等价字符串，且没有其他字符串与这些字符串特殊等价。
+另外两组分别是 ["xyzz", "zzxy"] 和 ["zzyx"]。特别需要注意的是，"zzxy" 不与 "zzyx" 特殊等价。
+```
+
+**示例 2：**
+
+```
+输入：["abc","acb","bac","bca","cab","cba"]
+输出：3
+解释：3 组 ["abc","cba"]，["acb","bca"]，["bac","cab"]
+```
+
+**注意:**
+
+1. 1 <= A.length <= 1000
+2. 1 <= A[i].length <= 20
+3. 所有 A[i] 都具有相同的长度。
+4. 所有 A[i] 都只由小写字母组成。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public int numSpecialEquivGroups(String[] A) {
+        Set<String> set = new HashSet<>();
+        for(String s: A) {
+            StringBuilder sb1 = new StringBuilder();
+            StringBuilder sb2 = new StringBuilder();
+            char[] chars = s.toCharArray();
+            // 遍历每个字符串, 对奇数位和偶数位的分别进行排序, 
+            for(int i=0; i<chars.length; i++){
+                if(i % 2 == 0){
+                    sb1.append(chars[i]);
+                }else{
+                    sb2.append(chars[i]);
+                }
+            }
+            String s1 = Arrays.sort(sb1.toString().toCharArray());
+            String s2 = Arrays.sort(sb2.toString().toCharArray());
+            // 将排序后的存放到set中, 自动去重
+            set.add(s1+s2);
+        }
+        // 最后返回set集合的数量
+        return set.size();
+    }
+}
+```
+
+## 36.[[917. 仅仅反转字母](https://leetcode-cn.com/problems/reverse-only-letters/)]
+
+**描述**
+
+给定一个字符串 `S`，返回 “反转后的” 字符串，其中不是字母的字符都保留在原地，而所有字母的位置发生反转。
+
+**示例**
+
+**示例 1：**
+
+```
+输入："ab-cd"
+输出："dc-ba"
+```
+
+**示例 2：**
+
+```
+输入："a-bC-dEf-ghIj"
+输出："j-Ih-gfE-dCba"
+```
+
+**示例 3：**
+
+```
+输入："Test1ng-Leet=code-Q!"
+输出："Qedo1ct-eeLg=ntse-T!"
+```
+
+**注意:**
+
+1. `S.length <= 100`
+2. `33 <= S[i].ASCIIcode <= 122` 
+3. `S` 中不包含 `\` or `"`
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public String reverseOnlyLetters(String S) {
+        char[] chars = S.toCharArray();
+        int left = 0, right = chars.length-1;
+        while(left < right){
+            while(left < right && !Character.isLetter(chars[left])){
+                left++;
+            }
+            while(left < right && !Character.isLetter(chars[right])){
+                right--;
+            }
+            char c = chars[left];
+            chars[left++] = chars[right];
+            chars[right--] = c;
+        }
+        return new String(chars);
+    }
+}
+```
+
+## 37.[[925. 长按键入](https://leetcode-cn.com/problems/long-pressed-name/)]
+
+**描述**
+
+你的朋友正在使用键盘输入他的名字 name。偶尔，在键入字符 c 时，按键可能会被长按，而字符可能被输入 1 次或多次。
+
+你将会检查键盘输入的字符 typed。如果它对应的可能是你的朋友的名字（其中一些字符可能被长按），那么就返回 True。
+
+**示例**
+
+**示例 1：**
+
+```
+输入：name = "alex", typed = "aaleex"
+输出：true
+解释：'alex' 中的 'a' 和 'e' 被长按。
+```
+
+**示例 2：**
+
+```
+输入：name = "saeed", typed = "ssaaedd"
+输出：false
+解释：'e' 一定需要被键入两次，但在 typed 的输出中不是这样。
+```
+
+**示例 3：**
+
+```
+输入：name = "leelee", typed = "lleeelee"
+输出：true
+```
+
+**注意:**
+
+1. `name.length <= 1000`
+2. `typed.length <= 1000`
+3. `name` 和 `typed` 的字符都是小写字母。
+
+**题解**
+
+**Java**
+
+```java
+class Solution {
+    public boolean isLongPressedName(String name, String typed) {
+        char[] n = name.toCharArray();
+        char[] t = typed.toCharArray();
+        int i = 0, j = 0;
+        // 双指针, 如果n[i] == t[j], 则两个指针同时前进
+        while(j < t.length){
+            if(i < n.length && n[i] == t[j]){
+                i++;
+                j++;
+                // 如果n[i] != t[j], 并且t[i]与前一个字符相同, 则t的指针前进
+            }else if(j > 0 && t[j] == t[j-1]){
+                j++;
+                // 都不满足, 返回false
+            }else{
+                return false;
+            }
+        }
+        // 最后比较n的指针是否指到最后
+        return i == n.length;
+    }
+}
+```
+
